# visual_sync_composer

./: .gitmodules  BUILDING.md  CMakeLists.txt  ESPNOW_manager.cpp  ESPNOW_manager.h  ESPNOW_types.h  EventManager.cpp  EventManager.h  EventModel.cpp  EventModel.h  INSTALL.md  ProjectModel.h  README.md  TODO.md  actions.h  audioanalyzer.cpp  audioanalyzer.h  audiowindow.cpp  audiowindow.h  devicereqistry.cpp  effectpresetbutton.cpp  effectpresetbutton.h  effectpresetmodel.cpp  effectpresetmodel.h  esphandler.cpp  espnowsender.cpp  espnowsender.h  espnowtypes.cpp  espnowtypes.h  espreceiver.cpp  frequencyregion.cpp  frequencyregion.h  gltext.h  helper.cpp  helper.h  horizontal_line.h  main.cpp  mainwindow.cpp  mainwindow.h  mdnsflasher.cpp  (+13 more)
Timeline/: AlignedTextItem.cpp  ColorLabel.h  EventProcessor.h  GraphicsScene.cpp  GraphicsView.cpp  GraphicsView.h  Indicator.cpp  Indicator.h  Timeline.cpp  Timeline.h  Track.cpp  Track.h  TrackGroup.cpp
composer/: mainwindow.ui
composer/timeline/: GraphicsView.cpp  GridGraphicsGroup.h  Timeline.cpp  Timeline.h  TrackGroup.cpp  TrackGroup.h
src/: ProjectModel.h  audioanalyzer.cpp  audioanalyzer.h  audiowindow.cpp  audiowindow.h  controllerabstractor.cpp  controllerabstractor.h  devicereqistry.cpp  dmxwindow.cpp  dmxwindow.h  downloader.h  effectpresetbutton.cpp  effectpresetbutton.h  effectpresetmodel.cpp  effectpresetmodel.h  esphandler.h  espnowsender.cpp  espnowsender.h  espnowtypes.cpp  espnowtypes.h  espreceiver.cpp  espreceiver.h  eventmodel.h  eventprocessor.h  frequencyregion.cpp  frequencyregion.h  fullscreenwindow.cpp  fullscreenwindow.h  gltext.cpp  gltext.h  helper.h  horizontal_line.cpp  knobwidget.cpp  knobwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mdnsflasher.cpp  midireceiver.cpp  midireceiver.h  (+22 more)
src/composer/: downloader.h  font_rendering.h  gltext.cpp  gltext.h  mainwindow.cpp  thread.h
src/composer/timeline/: AlignedTextItem.h  GraphicsScene.h  track.h
src/core/: audioanalyzer.cpp  audioanalyzer.h  audiofilter.cpp  audiofilter.h  biquadbandpass.cpp  biquadbandpass.h  controllerabstractor.cpp  controllerabstractor.h  devicereqistry.cpp  devicereqistry.h  effectpresetmodel.cpp  effectpresetmodel.h  espnowsender.cpp  espnowsender.h  espreceiver.cpp  eventmodel.cpp  fixturepresetmodel.cpp  fixturepresetmodel.h  helper.cpp  helper.h  mdnsflasher.h  midicontroller.cpp  midicontroller.h  midireceiver.cpp  midireceiver.h  netdevice.cpp  onsetsdshelpers.cpp  onsetsdshelpers.h  presetmodel.cpp  presetmodel.h  runningvariance.h  stateproxy.cpp  stateproxy.h  tubepresetmodel.cpp  wifieventprocessor.cpp  wifieventprocessor.h
src/timeline/: AlignedTextItem.cpp  EventModel.cpp  GraphicsView.h  Indicator.cpp  Indicator.h
src/ui/: audiowindow.cpp  audiowindow.h  dmxwindow.cpp  dmxwindow.h  frequencyregion.cpp  frequencyregion.h  knobwidget.cpp  oglwidget.cpp  oglwidget.h  presetbutton.h  radioselection.cpp  radioselection.h  tubewidget.cpp  tubewidget.h  vsctube.cpp  vsctube.h
